fix reviewer issues