@@ -20,8 +20,7 @@ public class MySerializerTest {
     public void originalAndDeserializedChildObjectShouldBeEquals() throws IllegalAccessException {
         ChildObject childObject = new ChildObject(true, false, 123, "str1");
 
-        JsonValue jsonValue = new JsonValueConverter().toJsonValue(childObject);
-        String serializedChildObject = jsonValue.toString();
+        String serializedChildObject = new JsonValueConverter().toJsonString(childObject);
 
         Gson gson = new Gson();
         ChildObject deserializedChildObject = gson.fromJson(serializedChildObject, ChildObject.class);
@@ -39,8 +38,7 @@ public class MySerializerTest {
                 new ChildObject(true, true, 789, "str4")};
         originalRootObject.setChildObjects(childObjects);
 
-        JsonValue rootJsonValue = new JsonValueConverter().toJsonValue(originalRootObject);
-        String serializedRootObject = rootJsonValue.toString();
+        String serializedRootObject = new JsonValueConverter().toJsonString(originalRootObject);
 
         Gson gson = new Gson();
         RootObject deserializedRootObject = gson.fromJson(serializedRootObject, RootObject.class);
@@ -51,17 +49,17 @@ public class MySerializerTest {
     public void customTest() throws IllegalAccessException {
         Gson gson = new Gson();
         JsonValueConverter jsonValueConverter = new JsonValueConverter();
-        assertEquals(jsonValueConverter.toJsonValue(null).toString(), gson.toJson(null));
-        assertEquals(jsonValueConverter.toJsonValue((byte) 1).toString(), gson.toJson((byte) 1));
-        assertEquals(jsonValueConverter.toJsonValue((short) 1f).toString(), gson.toJson((short) 1f));
-        assertEquals(jsonValueConverter.toJsonValue(1).toString(), gson.toJson(1));
-        assertEquals(jsonValueConverter.toJsonValue(1L).toString(), gson.toJson(1L));
-        assertEquals(jsonValueConverter.toJsonValue(1f).toString(), gson.toJson(1f));
-        assertEquals(jsonValueConverter.toJsonValue(1d).toString(), gson.toJson(1d));
-        assertEquals(jsonValueConverter.toJsonValue("aaa").toString(), gson.toJson("aaa"));
-        assertEquals(jsonValueConverter.toJsonValue('a').toString(), gson.toJson('a'));
-        assertEquals(jsonValueConverter.toJsonValue(new int[]{1, 2, 3}).toString(), gson.toJson(new int[]{1, 2, 3}));
-        assertEquals(jsonValueConverter.toJsonValue(List.of(1, 2, 3)).toString(), gson.toJson(List.of(1, 2, 3)));
-        assertEquals(jsonValueConverter.toJsonValue(Collections.singletonList(1)).toString(), gson.toJson(Collections.singletonList(1)));
+        assertEquals(jsonValueConverter.toJsonString(null), gson.toJson(null));
+        assertEquals(jsonValueConverter.toJsonString((byte) 1), gson.toJson((byte) 1));
+        assertEquals(jsonValueConverter.toJsonString((short) 1f), gson.toJson((short) 1f));
+        assertEquals(jsonValueConverter.toJsonString(1), gson.toJson(1));
+        assertEquals(jsonValueConverter.toJsonString(1L), gson.toJson(1L));
+        assertEquals(jsonValueConverter.toJsonString(1f), gson.toJson(1f));
+        assertEquals(jsonValueConverter.toJsonString(1d), gson.toJson(1d));
+        assertEquals(jsonValueConverter.toJsonString("aaa"), gson.toJson("aaa"));
+        assertEquals(jsonValueConverter.toJsonString('a'), gson.toJson('a'));
+        assertEquals(jsonValueConverter.toJsonString(new int[]{1, 2, 3}), gson.toJson(new int[]{1, 2, 3}));
+        assertEquals(jsonValueConverter.toJsonString(List.of(1, 2, 3)), gson.toJson(List.of(1, 2, 3)));
+        assertEquals(jsonValueConverter.toJsonString(Collections.singletonList(1)), gson.toJson(Collections.singletonList(1)));
     }
 }
